--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -10,15 +10,15 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
-      - run: docker build -t rallycoding/react-test -f ./client/Dockerfile.dev ./client
-      - run: docker run -e CI=true rallycoding/react-test npm test
+      - run: docker build -t kodi73/react-test -f ./client/Dockerfile.dev ./client
+      - run: docker run -e CI=true kodi73/react-test npm test
 
-      - run: docker build -t rallycoding/multi-client ./client
-      - run: docker build -t rallycoding/multi-nginx ./nginx
-      - run: docker build -t rallycoding/multi-server ./server
-      - run: docker build -t rallycoding/multi-worker ./worker
+      - run: docker build -t kodi73/multi-client ./client
+      - run: docker build -t kodi73/multi-nginx ./nginx
+      - run: docker build -t kodi73/multi-server ./server
+      - run: docker build -t kodi73/multi-worker ./worker
 
-      - run: docker push rallycoding/multi-client
-      - run: docker push rallycoding/multi-nginx
-      - run: docker push rallycoding/multi-server
-      - run: docker push rallycoding/multi-worker
+      - run: docker push kodi73/multi-client
+      - run: docker push kodi73/multi-nginx
+      - run: docker push kodi73/multi-server
+      - run: docker push kodi73/multi-worker
